src/objects/Conversion_Table__mdt.object
<CustomObject>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flexjet, LLC</fullName>
                    <default>true</default>
                    <label>Flexjet, LLC</label>
                </value>
                <value>
                    <fullName>NetJets Aviation</fullName>
                </value>
                <value>
                    <fullName>NetJets Europe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_Not_Combine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Combine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>From_Plane__c</fullName>
        <label>From Plane</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Plane__c</fullName>
        <label>To Plane</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>Conversion Table</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>Company__c</columns>
        <columns>From_Plane__c</columns>
        <columns>To_Plane__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Conversion Table</pluralLabel>
</CustomObject>